--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>12 STOREEZ Clone | Базовый гардероб</title>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>12 STOREEZ Clone | Базовый гардероб</title>
+
     <link rel="stylesheet" href="style.css">
     <nav class="navigation">
-            <a href="#">Новинки</a>
-            <a href="#">Каталог</a>
-            <a href="#">О нас</a>
-            <span class="cart-icon">
-                Корзина (<span id="cart-count">0</span>)
-            </span>
+        <a href="#">Новинки</a>
+        <a href="#">Каталог</a>
+        <a href="#">О нас</a>
+        <span class="cart-icon">
+            Корзина (<span id="cart-count">0</span>)
+        </span>
     </nav>
 
 </head>
@@ -28,86 +30,96 @@
     </header>
 
     <main>
+
+        <div class="filter-menu">
+            <button class="filter-btn active" data-filter="all">Все</button>
+            <button class="filter-btn" data-filter="coat">Пальто</button>
+            <button class="filter-btn" data-filter="sweater">Свитера</button>
+            <button class="filter-btn" data-filter="dress">Платья</button>
+        </div>
+
+
         <section class="product-grid">
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/coat.avif" alt="Пальто" class="product-image">
-        <h3 class="product-title">Шерстяное пальто</h3>
-        <p class="product-price">45 000 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
 
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/sweater.avif" alt="Свитер" class="product-image">
-        <h3 class="product-title">Кашемировый джемпер</h3>
-        <p class="product-price">18 500 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
+            <div class="product-card" data-category="coat">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/coat.avif" alt="Пальто" class="product-image">
+                <h3 class="product-title">Шерстяное пальто</h3>
+                <p class="product-price">45 000 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
 
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/dress.avif" alt="Платье" class="product-image">
-        <h3 class="product-title">Платье миди</h3>
-        <p class="product-price">12 900 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/coat.avif" alt="Пальто" class="product-image">
-        <h3 class="product-title">Шерстяное пальто</h3>
-        <p class="product-price">45 000 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
+            <div class="product-card" data-category="sweater">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/sweater.avif" alt="Свитер" class="product-image">
+                <h3 class="product-title">Кашемировый джемпер</h3>
+                <p class="product-price">18 500 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
 
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/sweater.avif" alt="Свитер" class="product-image">
-        <h3 class="product-title">Кашемировый джемпер</h3>
-        <p class="product-price">18 500 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
+            <div class="product-card" data-category="dress">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/dress.avif" alt="Платье" class="product-image">
+                <h3 class="product-title">Платье миди</h3>
+                <p class="product-price">12 900 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
+            <div class="product-card" data-category="coat">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/coat.avif" alt="Пальто" class="product-image">
+                <h3 class="product-title">Шерстяное пальто</h3>
+                <p class="product-price">45 000 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
 
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/dress.avif" alt="Платье" class="product-image">
-        <h3 class="product-title">Платье миди</h3>
-        <p class="product-price">12 900 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/coat.avif" alt="Пальто" class="product-image">
-        <h3 class="product-title">Шерстяное пальто</h3>
-        <p class="product-price">45 000 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
+            <div class="product-card" data-category="sweater">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/sweater.avif" alt="Свитер" class="product-image">
+                <h3 class="product-title">Кашемировый джемпер</h3>
+                <p class="product-price">18 500 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
 
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/sweater.avif" alt="Свитер" class="product-image">
-        <h3 class="product-title">Кашемировый джемпер</h3>
-        <p class="product-price">18 500 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
+            <div class="product-card" data-category="dress">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/dress.avif" alt="Платье" class="product-image">
+                <h3 class="product-title">Платье миди</h3>
+                <p class="product-price">12 900 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
+            <div class="product-card" data-category="coat">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/coat.avif" alt="Пальто" class="product-image">
+                <h3 class="product-title">Шерстяное пальто</h3>
+                <p class="product-price">45 000 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
 
-    <div class="product-card">
-        <button class="wishlist-btn">
-        <span class="heart-icon">&#9825;</span> </button>
-        <img src="images/dress.avif" alt="Платье" class="product-image">
-        <h3 class="product-title">Платье миди</h3>
-        <p class="product-price">12 900 руб.</p>
-        <button class="add-to-cart-btn">В корзину</button>
-    </div>
-</section>
+            <div class="product-card" data-category="sweater">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/sweater.avif" alt="Свитер" class="product-image">
+                <h3 class="product-title">Кашемировый джемпер</h3>
+                <p class="product-price">18 500 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
+
+            <div class="product-card" data-category="dress">
+                <button class="wishlist-btn">
+                    <span class="heart-icon">&#9825;</span> </button>
+                <img src="images/dress.avif" alt="Платье" class="product-image">
+                <h3 class="product-title">Платье миди</h3>
+                <p class="product-price">12 900 руб.</p>
+                <button class="add-to-cart-btn">В корзину</button>
+            </div>
+        </section>
     </main>
 
     <div id="modal" class="modal">
@@ -115,8 +127,10 @@
         <img class="modal-content" id="full-img">
     </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
 </body>
+
 </html>
