Добавлена форма подписки

--- a/index.html
+++ b/index.html
@@ -120,6 +120,20 @@
                 <button class="add-to-cart-btn">В корзину</button>
             </div>
         </section>
+
+        <section class="newsletter">
+    <div class="newsletter-content">
+        <h2>Подпишитесь на наши новости</h2>
+        <p>Узнавайте о новинках и закрытых распродажах первыми</p>
+        
+        <form id="subscribe-form">
+            <input type="email" id="user-email" placeholder="Ваш e-mail" required>
+            <button type="submit" class="subscribe-btn">Подписаться</button>
+        </form>
+        
+        <p id="subscribe-message" class="hidden"></p>
+    </div>
+</section>
     </main>
 
     <div id="modal" class="modal">
