--- a/index.html
+++ b/index.html
@@ -39,86 +39,8 @@
         </div>
 
 
-        <section class="product-grid">
-
-            <div class="product-card" data-category="coat">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/coat.avif" alt="Пальто" class="product-image">
-                <h3 class="product-title">Шерстяное пальто</h3>
-                <p class="product-price">45 000 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-
-            <div class="product-card" data-category="sweater">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/sweater.avif" alt="Свитер" class="product-image">
-                <h3 class="product-title">Кашемировый джемпер</h3>
-                <p class="product-price">18 500 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-
-            <div class="product-card" data-category="dress">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/dress.avif" alt="Платье" class="product-image">
-                <h3 class="product-title">Платье миди</h3>
-                <p class="product-price">12 900 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-            <div class="product-card" data-category="coat">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/coat.avif" alt="Пальто" class="product-image">
-                <h3 class="product-title">Шерстяное пальто</h3>
-                <p class="product-price">45 000 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-
-            <div class="product-card" data-category="sweater">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/sweater.avif" alt="Свитер" class="product-image">
-                <h3 class="product-title">Кашемировый джемпер</h3>
-                <p class="product-price">18 500 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-
-            <div class="product-card" data-category="dress">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/dress.avif" alt="Платье" class="product-image">
-                <h3 class="product-title">Платье миди</h3>
-                <p class="product-price">12 900 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-            <div class="product-card" data-category="coat">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/coat.avif" alt="Пальто" class="product-image">
-                <h3 class="product-title">Шерстяное пальто</h3>
-                <p class="product-price">45 000 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-
-            <div class="product-card" data-category="sweater">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/sweater.avif" alt="Свитер" class="product-image">
-                <h3 class="product-title">Кашемировый джемпер</h3>
-                <p class="product-price">18 500 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
-
-            <div class="product-card" data-category="dress">
-                <button class="wishlist-btn">
-                    <span class="heart-icon">&#9825;</span> </button>
-                <img src="images/dress.avif" alt="Платье" class="product-image">
-                <h3 class="product-title">Платье миди</h3>
-                <p class="product-price">12 900 руб.</p>
-                <button class="add-to-cart-btn">В корзину</button>
-            </div>
+        <section class="product-grid" id="product-grid">
+            
         </section>
 
         <section class="newsletter">
