--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </header>
 
     <main>
+        <div class="search-container">
+            <input type="text" id="product-search" placeholder="Поиск по коллекции...">
+            <span class="search-icon">&#128269;</span>
+        </div>
+
 
         <div class="filter-menu">
             <button class="filter-btn active" data-filter="all">Все</button>
