--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12 STOREEZ CLONE | Коллекция</title>
+    <title>12 STOREEZ CLONE</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -12,9 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">12 STOREEZ</div>
-            <div class="cart-icon">
-                Корзина (<span id="cart-count">0</span>)
-            </div>
+            <div class="cart-icon">КОРЗИНА (<span id="cart-count">0</span>)</div>
         </nav>
     </header>
 
@@ -38,17 +36,12 @@
             <button class="filter-btn active" data-filter="all">Все</button>
             <button class="filter-btn" data-filter="coat">Пальто</button>
             <button class="filter-btn" data-filter="sweater">Свитера</button>
-            <button class="filter-btn" data-filter="shoes">Обувь</button>
         </nav>
 
         <section class="product-grid" id="product-grid">
             <div class="loading-message">Загрузка коллекции...</div>
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 12 STOREEZ CLONE. Учебный проект.</p>
-    </footer>
 
     <script src="script.js"></script>
 </body>
